# agentic-contract-analyzer

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml
infrastructure/: docker-compose.yml
infrastructure/localstack-init/: 01_setup.sh
skills/q-issue-generator/: SKILL.md
skills/q-migrations/: SKILL.md
skills/q-python-code/: SKILL.md
skills/q-python-code-style/: SKILL.md
skills/q-python-unit-tests/: SKILL.md
src/api/: main.py  streaming.py
src/api/routes/: analyze.py
src/graph/: edges.py  graph.py  state.py
src/models/: extractor.py  report.py  risk.py  summarizer.py  validator.py
src/nodes/: extractor.py  hitl_gate.py  report_generator.py  risk_analyzer.py  summarizer.py  validator.py
src/services/: dynamo_service.py  llm_service.py  s3_service.py
src/utils/: logger.py  retry.py
tests/integration/: test_full_graph.py
tests/unit/nodes/: test_extractor.py  test_risk_analyzer.py  test_summarizer.py  test_validator.py
tests/unit/utils/: test_retry.py
